<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#F5F5F5">


    <EditText
        android:id="@+id/username"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="420dp"
        android:background="@drawable/shadow_edittext"
        android:ems="10"
        android:hint="@string/username"
        android:fontFamily="@font/kievitotmedium"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="360dp"
        android:background="@drawable/shadow_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:fontFamily="@font/kievitotmedium"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="300dp"
        android:background="@drawable/shadow_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:fontFamily="@font/kievitotmedium"
        android:inputType="textPassword"
        android:paddingLeft="20dp" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="220dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/kievitotextrabold"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:backgroundTint="#8720E3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="530dp"
        android:fontFamily="@font/kievitotextrabold"
        android:text="@string/signup"
        android:textColor="#363636"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="185dp"
        android:fontFamily="@font/kievitotregular"
        android:text="@string/privacyandpolicy1"
        android:textColor="#A0A0A0"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="-185dp"
        android:layout_centerHorizontal="true"
        android:text="@string/privacyamdpolicy2"
        android:textColor="#A0A0A0"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/kievitotregular"
        android:text="Already have an account?"
        android:textColor="#6A6A6A"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/GoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="-90dp"
        android:fontFamily="@font/kievitotmedium"
        android:text="Login"
        android:textColor="#AF55FF"
        android:textSize="18sp" />


</RelativeLayout>