...
        android:layout_marginBottom="170dp"
        android:fontFamily="@font/kievitotregular"
        android:text="Not a user?"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/GoToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="-160dp"
        android:fontFamily="@font/kievitotmedium"
...
