...
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="#363636"
        android:textSize="24sp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bio"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-100dp"
        android:background="@drawable/rounded_edittext"
...
